[package]
name = "mpc-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
